New author name!

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: DonateDesc
 main: dondesc\DonateDescription
 api: 3.0.0
 version: 1.0
-author: kqubey
+author: KolyaIngalyator
 description: "Easy Plugin"
 commands:
   donate:
